css/main.less
/* ... */
.artwork-mosaic { 
	margin-bottom: 20px;
	position: relative;
	height: 200px;
	.box-shadow(0 2px 4px rgba(0,0,0,0.2));
	.image-container {
		float: left;
		overflow: hidden;
		&.image-1-container {
			width: 80%;
			height: 100%;
			top: 0;
			left: 0;
		}
		&.image-2-container {
			width: 30%;
			position: absolute;
			top: 0;
			right: 0;
		}
		&.image-3-container {
			width: 50%;
			height: 100%;
			position: absolute;
			bottom: 0;
			right: 0;
			img {
				margin-top: 50%;
			}
		}
		img {
			width: 100%;
			height: auto;
		}
	}
	&.images-1 {
		.image-1-container {
			width: 100%;
		}
	}
	&.images-2 {
		.image-1-container {
			width: auto !important;
			height: 100% !important;
			img {
				margin-left: -20%;
			}
		}
		.image-2-container {
			width: auto !important;
			height: 100%;
			img {
				margin-left: 55%;
			}
		}
	}
}

#colophon {
	position: fixed;
	bottom: 0;
	height: @bottom;
	width: 100%;
	padding: 0;
	background: #1f1f1f;
	#footer-nav {
		ul {
			margin: 15px 0;
			padding: 0;
			li {
				float: left;
				margin: 0;
				padding: 0;
				font-size: 10px;
				line-height: 10px;
				a {
					display: block;
					color: #999;
					text-decoration: none;
					text-transform: uppercase;
					font-weight: 800;
					&:hover {
						color: #f1f1f1;
					}
				}
			}
		}
	}
}

/*
 * Lightbox section
 */

 // jquery ui fixes


#ui-datepicker-div,
.ui-autocomplete {
	z-index: 9999 !important;
}

#ui-datepicker-div {
	.ui-datepicker-title {
	select {
		display: inline !important;
	}
	}
}

body {
	.ui-corner-all {
		.border-radius(0 0 0 0);
	}
	.ui-widget-content {
		border-color: #ccc;
	}
	.ui-state-default,
	.ui-widget-content .ui-state-default,
	.ui-widget-header .ui-state-default,
	.ui-state-hover,
	.ui-widget-content .ui-state-hover,
	.ui-widget-header .ui-state-hover,
	.ui-state-focus,
	.ui-widget-content .ui-state-focus,
	.ui-widget-header .ui-state-focus {
		.gradient(#eee, #e0e0e0, #eee);
		color: #333;
	}
}

.lightbox_section {
	display: none;
	position: fixed;
	z-index: 9998;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background: rgba(0,0,0,0.7);
	.close-area {
		position: fixed;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
	}
	.lightbox_container {
		margin: 4% auto;
		width: 60%;
		max-width: 700px;
		max-height: 75%;
		padding: 2.5%;
		overflow: auto;
		background: #f0f0f0;
		color: #333;
		position: relative;
		z-index: 2;
		.box-shadow(0 0 50px rgba(0,0,0,1));
		&::-webkit-scrollbar {
			width: 15px;
			.border-radius(0);
		}
		&::-webkit-scrollbar-thumb {
			background: #333;
			.border-radius(0);
			border: 5px #f0f0f0 solid;
		}
		h1,
		h2 {
			font-weight: 200;
			margin-bottom: 30px;
			color: #999;
			font-size: 22px;
			line-height: 22px;
			span {
				font-weight: 800;
			}
		}
		h3 {
			font-weight: 800;
			font-size: 14px;
			line-height: 14px;
			color: #333;
			text-transform: uppercase;
		}
		h4 {
			color: #666;
			font-size: 14px;
			font-weight: 800;
		}
		.message {
			padding: 10px;
			background: lighten(gray, 40%);
			border: 1px solid lighten(gray, 20%);
			font-weight: 600;
			margin-bottom: 20px;
			&.error {
				background: lighten(red, 40%);
				border: 1px solid lighten(red, 20%);
			}
			&.success {
				background: lighten(green, 40%);
				border: 1px solid lighten(green, 20%);
			}
		}
		.half-1 {
			width: 50%;
			float: left;
			.box-sizing(border-box);
			padding-right: 15px;
		}
		.half-2 {
			width: 50%;
			float: left;
			.box-sizing(border-box);
			padding-left: 15px;
		}
		.two-thirds-1 {
			width: 66%;
			float: left;
			.box-sizing(border-box);
			padding-right: 15px;
		}
		.one-third-2 {
			width: 33%;
			float: left;
			.box-sizing(border-box);
			padding-left: 15px;
		}
		form {
			width: 100%;
			.form-section {
				margin: 0 0 20px;
				padding: 10px 20px;
				background: #fefefe;
			}
			input.title {
				display: block;
				width: 100%;
				font-size: 28px;
				padding: 12px;
				line-height: 28px;
				font-weight: 200;
				font-family: "Open Sans";
			}
			textarea {
				display: block;
				width: 100%;
				padding: 15px;
			}
			select {
				padding: 5px;
				width: 100%;
			}
			input[type=submit],
			.close {
				padding: 12px;
				font-size: 12px;
				margin: 0 5px 0 0;
			}
		}
	}
}

/*
 * Add artwork to art guide page
 */

#add_to_existing_guide {
	margin-bottom: 20px;
	border-bottom: 1px dotted #aaa;
	.form-inputs,
	.form-actions {
		float: left;
	}
	.form-inputs {
		width: 65%;
		margin-right: 5%;
		input[type=text],
		textarea,
		select {
			width: 100%;
			padding: 10px;
			font-family: "Open Sans";
		}
	}
	.form-actions {
		margin-top: 24px;
		float: right;
	}
}
/* ... */

